--- a/pdf-convert.html
+++ b/pdf-convert.html
@@ -23,7 +23,7 @@
       <h1 class="text-xl font-bold">PDF Converter</h1>
       <nav class="space-x-4">
         <a href="index.html" class="text-gray-600 hover:text-blue-600">Home</a>
-        <a href="pdf-tools.html" class="text-gray-600 hover:text-blue-600">All PDF Tools</a>
+        <a href="pdf-convert.html" class="text-gray-600 hover:text-blue-600">All PDF Tools</a>
       </nav>
     </div>
   </header>
