--- a/pdf-convert.html
+++ b/pdf-convert.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Convert and optimize your PDF files easily with our responsive PDF Converter tool. Free and fast!">
-  <meta name="keywords" content="PDF Converter, PDF to Word, PDF to JPG, compress PDF, convert PDF">
-  <meta name="author" content="YourSiteName">
+  <meta name="keywords" content="PDF Converter, PDF to Word, PDF to JPG, compress PDF, convert PDF, JPG to PDF,Word to PDF, EXCEL to PDF,Powerpoint to PDF,text to PDF">
+  <meta name="VINAY" content="V.AI">
   <title>PDF Converter Tool - Free Online PDF Conversion</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a2d79c1f8e.js" crossorigin="anonymous"></script>
