--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="max-w-7xl mx-auto px-4 py-5 flex justify-between items-center">
       <h1 class="text-xl font-bold text-blue-700">PDF Toolbox</h1>
       <nav class="space-x-4 text-sm">
-        <a href="index.html" class="hover:text-blue-600">Home</a>
-        <a href="all-tools.html" class="hover:text-blue-600">All Tools</a>
-        <a href="about.html" class="hover:text-blue-600">About</a>
-        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+        <a href="pdf-convert.html" class="hover:text-blue-600">Home</a>
+        <a href="pdf-convert.html" class="hover:text-blue-600">All Tools</a>
+        <a href="pdf-convert.html" class="hover:text-blue-600">About</a>
+        <a href="pdf-convert.html" class="hover:text-blue-600">Contact</a>
       </nav>
     </div>
   </header>
