--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Free online PDF tools to compress, convert, merge, split, and edit PDF documents easily.">
   <meta name="keywords" content="PDF Tools, PDF Compressor, PDF Converter, Merge PDF, Split PDF, Free PDF Tools, Word to PDF,Excel to PDF, DOC to PDF,">
   <meta name="VINAY" content="V.AI">
-  <title>PDF Tools - Free Online PDF Utilities</title>
+  <title>V.AI PDF - Free Online PDF Utilities</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
