--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <h1 class="text-xl font-bold text-blue-700">PDF Toolbox</h1>
       <nav class="space-x-4 text-sm">
         <a href="pdf-convert.html" class="hover:text-blue-600">Home</a>
-        <a href="pdf-convert.html" class="hover:text-blue-600">All Tools</a>
-        <a href="pdf-convert.html" class="hover:text-blue-600">About</a>
-        <a href="pdf-convert.html" class="hover:text-blue-600">Contact</a>
+        <a href="All Tools" class="hover:text-blue-600">All Tools</a>
+        <a href="About" class="hover:text-blue-600">About</a>
+        <a href="contact" class="hover:text-blue-600">Contact</a>
       </nav>
     </div>
   </header>
